API changed to discogs.com and working

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
     <div class="wrapper">
         <section class="searchSection">
-            <div class="search">
+            <div class="searchWrapper">
                 <div class="inputWrapper">
-                    <input type="text" id="searchInput">
+                    <input type="text" class="searchInput">
                 </div>
                 <div class="btbWrapper">
-                    <div class="searchBtn">
-                        <h2>Busca por Banda</h2>
+                    <div class="searchBtn search">
+                        <h2 class="search">Busca por Banda</h2>
                     </div>
                 </div>
             </div>
