--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="headerWrapper">
-            <h1>MusicAPIs</h1>
+            <h1><a href="index.html">MusicAPIs</a></h1>
         </div>
     </header>
 
@@ -23,9 +23,9 @@
                 <div class="inputWrapper">
                     <input type="text" class="searchInput">
                 </div>
-                <div class="btbWrapper">
+                <div class="btnWrapper">
                     <div class="searchBtn search">
-                        <h2 class="search">Busca por Banda</h2>
+                        <span class="search">Busca por Banda</span>
                     </div>
                 </div>
             </div>
