--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
     <header class="header">
         <div class="headerWrapper">
-            <h1><a href="index.html">MusicAPIs</a></h1>
+            <!-- <h1><a href="index.html">MusicAPIs</a></h1> -->
+            <a href="index.html"><img src="img/logo-apis.png" alt=""></a>
         </div>
     </header>
 
