Modo Asiático: todo menos hacer caché de datos

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                         <span class="search">Busca por Banda</span>
                     </div>
                 </div>
+                <div class="btnWrapper2">
+                    <div class="searchBtn2 search">
+                        <span class="search">Limpiar</span>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="resultsSection">
