refactor: refactor css styles
CSS styles remade from 0.
Mobile styles finished.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="searchSection">
             <div class="searchWrapper">
                 <div class="inputWrapper">
-                    <input type="text" class="searchInput">
+                    <input type="text" class="searchInput" placeholder="busca el nombre de tu banda">
                 </div>
                 <div class="btnWrapper">
                     <div class="searchBtnWrapper">
