feat: Add google auth button
favorites are shown when the app authenticates with google

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <title>musicAPIs</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -20,6 +22,11 @@
         <div class="headerWrapper">
             <!-- <h1><a href="index.html">MusicAPIs</a></h1> -->
             <a href="index.html"><img src="img/logo-apis.png" alt=""></a>
+            <div class="headBtnWrapper">
+                <div class="headBtnAuth">
+                    Conectar
+                </div>
+            </div>
         </div>
     </header>
 
@@ -61,10 +68,12 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+
 
     <script src="js/functions.js"></script>
-    <script src="js/main.js"></script>
     <script src="js/firebase.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
