ADD class DiscogsAPI

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <script src="js/functions.js"></script>
     <script src="js/firebase.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/DiscogsAPI.js"></script>
 
 </body>
 
